[package]
name = "stagehand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

[features]
default = []
2d = ["draw2d"]
draw2d = ["loading"]
input = []
loading = ["dep:uuid"]
sdl2 = ["dep:sdl2", "2d", "input", "loading"]
web = []

[dependencies.sdl2]
version = "0.36"
optional = true
default-features = false
features = ["ttf", "image", "mixer"]

[dependencies.uuid]
version = "1.7.0"
optional = true
features = ["v4", "fast-rng"]

[[example]]
required-features = ["sdl2"]
name = "sdl2"