[package]
name = "stagehand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

[features]
default = []
2d = ["draw2d", "input"]
draw2d = ["loading"]
example = ["2d"]
input = []
loading = ["dep:uuid"]

[dependencies.uuid]
version = "1.7.0"
optional = true
features = ["v4", "fast-rng"]